crates/pg_syntax/tests/snapshots/postgres_regress/plancache@33.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: select cache_test_2();
---
SelectStmt@0..22
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..19
    FuncCall@7..19
      Ident@7..19 "cache_test_2"
  Ascii40@19..20 "("
  Ascii41@20..21 ")"
  Ascii59@21..22 ";"

