crates/pg_syntax/tests/snapshots/postgres_regress/plancache@42.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: select f1 from abc;
---
SelectStmt@0..19
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..9
    ColumnRef@7..9
      Ident@7..9 "f1"
  Whitespace@9..10 " "
  From@10..14 "from"
  Whitespace@14..15 " "
  RangeVar@15..18
    Ident@15..18 "abc"
  Ascii59@18..19 ";"

