crates/pg_syntax/tests/snapshots/postgres_regress/plancache@57.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: select cachebug();
---
SelectStmt@0..18
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..15
    FuncCall@7..15
      Ident@7..15 "cachebug"
  Ascii40@15..16 "("
  Ascii41@16..17 ")"
  Ascii59@17..18 ";"

