crates/pg_syntax/tests/snapshots/postgres_regress/plancache@59.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create table pc_list_part_null partition of pc_list_parted for values in (null);
---
CreateStmt@0..80
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..30
    Ident@13..30 "pc_list_part_null"
  Whitespace@30..31 " "
  Partition@31..40 "partition"
  Whitespace@40..41 " "
  Of@41..43 "of"
  Whitespace@43..44 " "
  RangeVar@44..58
    Ident@44..58 "pc_list_parted"
  Whitespace@58..59 " "
  For@59..62 "for"
  Whitespace@62..63 " "
  Values@63..69 "values"
  Whitespace@69..70 " "
  PartitionBoundSpec@70..78
    InP@70..72 "in"
    Whitespace@72..73 " "
    Ascii40@73..74 "("
    AConst@74..78
      NullP@74..78 "null"
  Ascii41@78..79 ")"
  Ascii59@79..80 ";"

