crates/pg_syntax/tests/snapshots/postgres_regress/plancache@74.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into test_mode select 1 from generate_series(1,1000) union all select 2;"
---
InsertStmt@0..79
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..21
    Ident@12..21 "test_mode"
  Whitespace@21..22 " "
  SelectStmt@22..78
    Select@22..28 "select"
    Whitespace@28..29 " "
    SelectStmt@29..58
      ResTarget@29..30
        AConst@29..30
          Iconst@29..30 "1"
      Whitespace@30..31 " "
      From@31..35 "from"
      Whitespace@35..36 " "
      RangeFunction@36..58
        List@36..58
          FuncCall@36..58
            Ident@36..51 "generate_series"
            Ascii40@51..52 "("
            AConst@52..53
              Iconst@52..53 "1"
            Ascii44@53..54 ","
            AConst@54..58
              Iconst@54..58 "1000"
    Ascii41@58..59 ")"
    Whitespace@59..60 " "
    Union@60..65 "union"
    Whitespace@65..66 " "
    All@66..69 "all"
    Whitespace@69..70 " "
    SelectStmt@70..78
      Select@70..76 "select"
      Whitespace@76..77 " "
      ResTarget@77..78
        AConst@77..78
          Iconst@77..78 "2"
  Ascii59@78..79 ";"

