crates/pg_syntax/tests/snapshots/postgres_regress/plancache@75.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create index on test_mode (a);
---
IndexStmt@0..30
  Create@0..6 "create"
  Whitespace@6..7 " "
  Index@7..12 "index"
  Whitespace@12..13 " "
  On@13..15 "on"
  Whitespace@15..16 " "
  RangeVar@16..25
    Ident@16..25 "test_mode"
  Whitespace@25..26 " "
  Ascii40@26..27 "("
  IndexElem@27..28
    Ident@27..28 "a"
  Ascii41@28..29 ")"
  Ascii59@29..30 ";"

